✨ feat: overflow height fix

--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -23,6 +23,14 @@
 		@apply border-border;
 	}
 
+	body, #root {
+		min-height: 100dvh;
+		height: 100%;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+	}
+
   :root {
     --radius: 0.5rem;
 
